fixed laptop screen

--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
       </div>
       <div class="aboutme">
         <img id="imgs2" src="src_img/carbon-device-screen-white.png">
-        <img id="imgs3" src="src_img/left.jpg">
+          <!-- <img id="imgs3" src="src_img/left.jpg"> -->
+          <div class="black-img"></div>
         <!-- <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 <lottie-player id ="part2" src="https://assets5.lottiefiles.com/packages/lf20_ktdrtmna.json"  background="transparent"  speed="1"  style="width: 300px; height: 300px;"  loop  autoplay></lottie-player> -->
         <!-- <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
