--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&family=Inter:wght@500&family=Playfair+Display:ital,wght@0,400;1,700&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&family=Inter:wght@500&family=Playfair+Display:ital,wght@0,400;1,700&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
     integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog=="
     crossorigin="anonymous" />
@@ -31,7 +33,8 @@
     </div>
 
     <div class="content">
-      <div class="h" style="font-family: 'agustina'; display: flex;"><u id="u" style="align-items: center; margin-top: 11px;">Sourabh</u></div>
+      <div class="h" style="font-family: 'agustina'; display: flex;"><u id="u"
+          style="align-items: center; margin-top: 11px;">Sourabh</u></div>
       <div class="front-sec">
         <div class="intro">
           Hey<span class="edit">!</span> I Am Sourabh<span class="edit">.</span><br>
@@ -41,8 +44,8 @@
         <div class="imgs">
           <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js">
           </script>
-          <lottie-player src="lotti files/img_lotti.json" background="transparent" speed="1"
-            loop autoplay></lottie-player>
+          <lottie-player src="lotti files/img_lotti.json" background="transparent" speed="1" loop
+            autoplay></lottie-player>
         </div>
       </div>
       <div class="menus">
@@ -71,18 +74,23 @@
       </div>
       <div class="aboutme">
         <img id="imgs2" src="src_img/carbon-device-screen-white.png">
-          <!-- <img id="imgs3" src="src_img/left.jpg"> -->
-          <div class="black-img"></div>
-        <!-- <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-<lottie-player id ="part2" src="https://assets5.lottiefiles.com/packages/lf20_ktdrtmna.json"  background="transparent"  speed="1"  style="width: 300px; height: 300px;"  loop  autoplay></lottie-player> -->
-        <!-- <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-<lottie-player id="part1" src="https://assets1.lottiefiles.com/packages/lf20_ychmxgnq.json"  background="transparent"  speed="1"  style="width: 300px; height: 300px;"  loop  autoplay></lottie-player>
-          <h2 id="whyme"style="font-family: 'Playfair Display', serif;"><span class="whyme"></span></h2>
-          <h2 class="whyabout">I'm currently a final year undergrad college student <br> pursuing B.Tech Information Technology.<br>I bring a lot to the table in terms of skill and ability.<br>I assure you that I will give my best and work to my <br>full potential so that I can contribute as much as <br>I can towards the growth and welfare of this great brand</h2> -->
+        <div class="blacksrc">
+          <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+          <lottie-player id="part1" src="https://assets5.lottiefiles.com/packages/lf20_ktdrtmna.json"
+            background="transparent" speed="1" loop autoplay></lottie-player>
+          <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+          <lottie-player id="part2" src="https://assets1.lottiefiles.com/packages/lf20_ychmxgnq.json"
+            background="transparent" speed="1" loop autoplay></lottie-player>
+          <h2 id="whyme" style="font-family: 'Playfair Display', serif;"><span class="whyme"></span></h2>
+          <h2 class="whyabout" style="color: white; ">I'm currently a final year undergrad college student  pursuing B.Tech Information
+            Technology.<br>I bring a lot to the table in terms of skill and ability.<br>I assure you that I will give my
+            best and work to my full potential so that I can contribute as much as I can towards the growth and
+            welfare of this great brand.</h2>
+        </div>
         <!-- <img id="imgs1" src="src_img/left.jpg"> -->
         <!-- <img id="imgs"  src="src_img/right.png"> -->
 
-      
+
       </div>
     </div>
 
@@ -109,10 +117,10 @@
     });
   </script>
   <script>var typed = new Typed('.whyme', {
-    strings: ['WHY HIRE ME ?'],
-    typeSpeed: 200,
-  });
-</script>
+      strings: ['WHY HIRE ME ?'],
+      typeSpeed: 200,
+    });
+  </script>
   <!-- moving menu bar script -->
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
