--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           <lottie-player id="part2" src="https://assets1.lottiefiles.com/packages/lf20_ychmxgnq.json"
             background="transparent" speed="1" loop autoplay></lottie-player>
           <h2 id="whyme" style="font-family: 'Playfair Display', serif;"><span class="whyme"></span></h2>
-          <h2 class="whyabout" style="color: white; ">I'm currently a final year undergrad college student  pursuing B.Tech Information
+          <h2 class="whyabout" style="background-color: white; ">I'm currently a final year undergrad college student  pursuing B.Tech Information
             Technology.<br>I bring a lot to the table in terms of skill and ability.<br>I assure you that I will give my
             best and work to my full potential so that I can contribute as much as I can towards the growth and
             welfare of this great brand.</h2>
