--- a/index.html
+++ b/index.html
@@ -87,11 +87,8 @@
             best and work to my full potential so that I can contribute as much as I can towards the growth and
             welfare of this great brand.</h2>
         </div>
-        <!-- <img id="imgs1" src="src_img/left.jpg"> -->
-        <!-- <img id="imgs"  src="src_img/right.png"> -->
-
-
       </div>
+      <div class="certify" style="background-color: aqua;">dsjkhj</div>
     </div>
 
   </div>
