final adding for why me

--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
         <img id="imgs2" src="src_img/carbon-device-screen-white.png">
         <div class="blacksrc">
           <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-          <lottie-player id="part1" src="https://assets5.lottiefiles.com/packages/lf20_ktdrtmna.json"
+          <lottie-player id="part2" src="https://assets5.lottiefiles.com/packages/lf20_ktdrtmna.json"
             background="transparent" speed="1" loop autoplay></lottie-player>
           <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-          <lottie-player id="part2" src="https://assets1.lottiefiles.com/packages/lf20_ychmxgnq.json"
+          <lottie-player id="part1" src="https://assets1.lottiefiles.com/packages/lf20_ychmxgnq.json"
             background="transparent" speed="1" loop autoplay></lottie-player>
           <h2 id="whyme" style="font-family: 'Playfair Display', serif;"><span class="whyme"></span></h2>
           <h2 class="whyabout" style="background-color: white; ">I'm currently a final year undergrad college student  pursuing B.Tech Information
@@ -88,7 +88,7 @@
             welfare of this great brand.</h2>
         </div>
       </div>
-      <div class="certify" style="background-color: aqua;">dsjkhj</div>
+      <div class="certify">dsjkhj</div>
     </div>
 
   </div>
