--- a/index.html
+++ b/index.html
@@ -85,8 +85,7 @@
           <h2 class="whyabout" style="background-color: white; ">I'm currently a final year undergrad college student  pursuing B.Tech Information
             Technology.<br>I bring a lot to the table in terms of skill and ability.<br>I assure you that I will give my
             best and work to my full potential so that I can contribute as much as I can towards the growth and
-            welfare of this great brand.</h2><div class="ress"> <input type="button" value="resume" class="resum"></div>
-            
+            welfare of this great brand.</h2><div class="ress"><button class="resum">RESUME</div>
         </div>
       </div>
       <div class="certify">dsjkhj</div>
