part 2 final submit

--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&family=Playfair+Display:ital,wght@0,400;1,700&display=swap"
     rel="stylesheet">
+  
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Handlee&display=swap" rel="stylesheet">
+   
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Gilda+Display&display=swap" rel="stylesheet">  
 </head>
 
 <body>
@@ -85,15 +93,11 @@
           <div class="whyabout" style="background-color: white; "><h2>I'm currently a final year undergrad college student  pursuing B.Tech Information
             Technology.<br>I bring a lot to the table in terms of skill and ability.<br>I assure you that I will give my
             best and work to my full potential so that I can contribute as much as I can towards the growth and
-<<<<<<< Updated upstream
-            welfare of this great brand.<button class="resum">RESUME</button> </h2>
-            <!-- <div class="ress"></div> -->
-=======
-            welfare of this great brand.</h2><div class="ress"><button class="resum">RESUME</div></div>
->>>>>>> Stashed changes
+            welfare of this great brand.</h2><div class="ress"><a href="https://drive.google.com/file/d/1xKZADWjwM3rxCv_lRx08DHs9vs_r42LA/view?usp=sharing"
+              target="_blank"><button class="resum"><h3>RESUME</h3></button></a></div></div>
         </div>
       </div>
-      <div class="certify">dsjkhj</div>
+      <div class="certify"><div class="certi">Certification</div></div>
     </div>
 
   </div>
