--- a/index.html
+++ b/index.html
@@ -17,14 +17,18 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&family=Playfair+Display:ital,wght@0,400;1,700&display=swap"
     rel="stylesheet">
-  
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Handlee&display=swap" rel="stylesheet">
-   
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Gilda+Display&display=swap" rel="stylesheet">  
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Handlee&display=swap" rel="stylesheet">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Gilda+Display&display=swap" rel="stylesheet">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Tilt+Prism&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -90,16 +94,44 @@
           <lottie-player id="part1" src="https://assets1.lottiefiles.com/packages/lf20_ychmxgnq.json"
             background="transparent" speed="1" loop autoplay></lottie-player>
           <h2 id="whyme" style="font-family: 'Playfair Display', serif;"><span class="whyme"></span></h2>
-          <div class="whyabout" style="background-color: white; "><h2>I'm currently a final year undergrad college student  pursuing B.Tech Information
-            Technology.<br>I bring a lot to the table in terms of skill and ability.<br>I assure you that I will give my
-            best and work to my full potential so that I can contribute as much as I can towards the growth and
-            welfare of this great brand.</h2><div class="ress"><a href="https://drive.google.com/file/d/1xKZADWjwM3rxCv_lRx08DHs9vs_r42LA/view?usp=sharing"
-              target="_blank"><button class="resum"><h3>RESUME</h3></button></a></div></div>
+          <div class="whyabout" style="background-color: white; ">
+            <h2>I'm currently a final year undergrad college student pursuing B.Tech Information
+              Technology.<br>I bring a lot to the table in terms of skill and ability.<br>I assure you that I will give
+              my
+              best and work to my full potential so that I can contribute as much as I can towards the growth and
+              welfare of this great brand.</h2>
+            <div class="ress"><a
+                href="https://drive.google.com/file/d/1xKZADWjwM3rxCv_lRx08DHs9vs_r42LA/view?usp=sharing"
+                target="_blank"><button class="resum">
+                  <h3>RESUME</h3>
+                </button></a></div>
+          </div>
         </div>
       </div>
-      <div class="certify"><div class="certi">Certification</div></div>
+      
+      <div class="certify">
+        <img src="src_img/desktop-lg-background-2500w.jpeg" alt="" id="imgbg">
+        <div class="certi">
+          <h3>Certification</h3>
+        </div>
+        <div class="carousel">
+          <div class="carousel-container">
+            <div class="cards">
+              <!-- Add your cards here -->
+              <div class="card">Card 1</div><br>
+              <div class="card">Card 2</div><br>
+              <div class="card">Card 3</div><br>
+              <div class="card">Card 4</div><br>
+              <div class="card">Card 5</div><br>
+              <div class="card">Card 6</div><br>
+              <div class="card">Card 7</div><br>
+              <div class="card">Card 8</div><br>
+            </div>
+          </div>
+        </div>
+      
     </div>
-
+    </div>
   </div>
 
   <nav>
@@ -114,7 +146,7 @@
 
 
 
-
+  <script src="cardscript.js"></script>
   <script src="script.js"></script>
   <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
   <script>var typed = new Typed('.element', {
