--- a/index.html
+++ b/index.html
@@ -167,12 +167,22 @@
   <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
   <script>var typed = new Typed('.element', {
       strings: ['Web Developer &', 'Python Programmer'],
-      typeSpeed: 50,
+      typeSpeed: 150,
+      loop:true,
+      backSpeed: 70,
+      backDelay: 2000,
+      showCursor: false,
+      loopCount: 5,
     });
   </script>
   <script>var typed = new Typed('.whyme', {
       strings: ['WHY HIRE ME ?'],
-      typeSpeed: 200,
+      typeSpeed: 150,
+      loop:true,
+      showCursor: false,
+      backSpeed: 70,
+      backDelay: 2000,
+      
     });
   </script>
   <!-- moving menu bar script -->
