--- a/index.html
+++ b/index.html
@@ -109,45 +109,44 @@
         </div>
       </div>
 
-      <div class="certify">
-        <div><img src="src_img/desktop-lg-background-2500w.jpeg" alt="" id="imgbg">
-          <div class="certi">
-            <h3>Certification</h3>
-          </div>
-          <div class="outerbox">
-            <div class="carousel">
-              <div class="carousel-container">
-                <div class="cards">
-                  <!-- Add your cards here -->
-                  <div class="card" id="card1"><a href="https://coursera.org/verify/ULQE4T8S4H8C" target="_blank"><img
-                        src="certi-imgs/guided1.jpg"></a></div><br>
-                  <div class="card" id="card2"><a href="https://coursera.org/verify/SDDK9PSCAADB" target="_blank"><img
-                        src="certi-imgs/guided2.jpg"></a> </div><br>
-                  <div class="card" id="card3"><a
-                      href="https://courses.cognitiveclass.ai/certificates/68af8d930c144656825962e3a336f012"
-                      target="_blank"><img src="certi-imgs/Cognitiveclass Python 1.jpg"></a> </div><br>
-                  <div class="card" id="card4"><a href="https://coursera.org/verify/UZZCDDM2XMXZ" target="_blank"><img
-                        src="certi-imgs/Html coursera 1.jpg"></a> </div><br>
-                  <div class="card" id="card5"><a
-                      href="https://drive.google.com/file/d/12qX2jA2OKyFVSXK6GX1eKJCapNEqQGd5/view?usp=sharing"
-                      target="_blank"><img src="certi-imgs/Spring PYTHON 1.jpg"></a> </div><br>
+      <div class="certify" >
+        <div class="certi">
+          <h3>Certification</h3>
+        </div>
+        <div class="outerbox">
+          <div class="carousel">
+            <div class="carousel-container">
+              <div class="cards">
+                <!-- Add your cards here -->
+                <div class="card" id="card1"><a href="https://coursera.org/verify/ULQE4T8S4H8C" target="_blank"><img
+                      src="certi-imgs/guided1.jpg"></a></div><br>
+                <div class="card" id="card2"><a href="https://coursera.org/verify/SDDK9PSCAADB" target="_blank"><img
+                      src="certi-imgs/guided2.jpg"></a> </div><br>
+                <div class="card" id="card3"><a
+                    href="https://courses.cognitiveclass.ai/certificates/68af8d930c144656825962e3a336f012"
+                    target="_blank"><img src="certi-imgs/Cognitiveclass Python 1.jpg"></a> </div><br>
+                <div class="card" id="card4"><a href="https://coursera.org/verify/UZZCDDM2XMXZ" target="_blank"><img
+                      src="certi-imgs/Html coursera 1.jpg"></a> </div><br>
+                <div class="card" id="card5"><a
+                    href="https://drive.google.com/file/d/12qX2jA2OKyFVSXK6GX1eKJCapNEqQGd5/view?usp=sharing"
+                    target="_blank"><img src="certi-imgs/Spring PYTHON 1.jpg"></a> </div><br>
 
-                </div>
               </div>
             </div>
-            <div class="aboucerti"><span class="cer">Certifications</span> that<br>
-              Showcase My<br><span class="cer">Expertise</span> and<br> <span class="cer">Dedication</span><span
-                class="ceri">&nbsp;!</span></div>
           </div>
+          <div class="aboucerti"><span class="cer">Certifications</span> that<br>
+            Showcase My<br><span class="cer">Expertise</span> and<br> <span class="cer">Dedication</span><span
+              class="ceri">&nbsp;!</span></div>
         </div>
+
       </div>
-    
-      <div style="bottom: 0; position: relative;">
-        <div class="zz" style="background-color: red; width: 30vw; height: auto; ">hkgjhgj<br>cdcd<br>uhguyg</div>
-      </div>
-    </div> 
+
+    </div>
+    <div class="skills" style="background-color: rgb(120,120,124);">
+      <div class="sk" style="height: 70vh;"></div>
+    </div>
   </div>
-  
+
   <nav>
     <ul>
       <li><i class="fas fa-home"></i><a href="index.html">Home</a></li>
@@ -159,7 +158,7 @@
     </ul>
   </nav>
 
-  
+
 
 
 
@@ -167,10 +166,10 @@
   <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
   <script>var typed = new Typed('.element', {
       strings: ['Web Developer &', 'Python Programmer'],
-      typeSpeed: 150,
-      loop:true,
-      backSpeed: 70,
-      backDelay: 2000,
+      typeSpeed: 100,
+      loop: true,
+      backSpeed: 50,
+      backDelay: 1500,
       showCursor: false,
       loopCount: 5,
     });
@@ -178,11 +177,11 @@
   <script>var typed = new Typed('.whyme', {
       strings: ['WHY HIRE ME ?'],
       typeSpeed: 150,
-      loop:true,
+      loop: true,
       showCursor: false,
       backSpeed: 70,
       backDelay: 2000,
-      
+
     });
   </script>
   <!-- moving menu bar script -->
