--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Tilt+Prism&display=swap" rel="stylesheet">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Amaranth&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -109,7 +113,7 @@
         </div>
       </div>
 
-      <div class="certify" >
+      <div class="certify">
         <div class="certi">
           <h3>Certification</h3>
         </div>
@@ -142,59 +146,90 @@
       </div>
 
     </div>
-    <div class="skills" style="background-color: rgb(120,120,124);">
-      <div class="sk" style="height: 70vh;"></div>
+    <div class="skills" style="background-color: rgb(73,118,152);">
+      <div>
+        <h3 style="margin: 0;">
+          <span id="skillspan">What</span>&nbsp; <span id="skillspan1">I</span>&nbsp;work&nbsp;<span id="skillspan1">On</span>
+        </h3>
+        <div class="carousel-container1">
+          <div class="carousel1">
+            <div class="item1"><img src="logo/html.png" style="border-radius: 90px;"
+                  width="63" height="64"></div>
+            <div class="item1">
+                <img src="logo/css-3.png" style="border-radius: 90px;" width="63" height="64"></div>
+            <div class="item1">
+                <img src="logo/java-script.png" style="border-radius: 90px;" width="63" height="64"></div>
+            <div class="item1">
+                <img src="logo/structure.png" style="border-radius: 90px;" width="63" height="64"></div>
+            <div class="item1">
+                <img src="logo/sql-server.png" style="border-radius: 90px;" width="63" height="64"></div>
+            <div class="item1">
+                <img src="logo/python.png" style="border-radius: 90px;" width="63" height="64"></div>
+            <div class="item1">
+                <img src="logo/git.png" style="border-radius: 90px;" width="63" height="64"></div>
+            <div class="item1">
+                <img src="logo/github.png" style="border-radius: 90px;" width="63" height="64"></div>
+            <div class="item1">
+                <img src="logo/wordpress.png" style="border-radius: 90px;" width="63" height="64"></div>
+            <div class="item1">
+                <img src="logo/KNIME-LOGO.png" style="border-radius: 90px;" width="63" height="64"></div>
+          </div>
+        </div>
+      </div>
     </div>
-  </div>
+    <footer>
+      <div id="footer">© 2023 All rights reserved  |  Made with <span style="color: red;">♡</span> by Sourabh Singh</div>
+    </footer>
 
-  <nav>
-    <ul>
-      <li><i class="fas fa-home"></i><a href="index.html">Home</a></li>
-      <li><i class="fas fa-user-alt"></i><a
-          href="https://drive.google.com/file/d/1xKZADWjwM3rxCv_lRx08DHs9vs_r42LA/view?usp=sharing"
-          target="_blank">About</a></li>
-      <li><i class="fas fa-envelope"></i><a href="https://www.linkedin.com/in/smilesourabh/" target="_blank">Contact</a>
-      </li>
-    </ul>
-  </nav>
+    <nav>
+      <ul>
+        <li><i class="fas fa-home"></i><a href="index.html">Home</a></li>
+        <li><i class="fas fa-user-alt"></i><a
+            href="https://drive.google.com/file/d/1xKZADWjwM3rxCv_lRx08DHs9vs_r42LA/view?usp=sharing"
+            target="_blank">About</a></li>
+        <li><i class="fas fa-envelope"></i><a href="https://www.linkedin.com/in/smilesourabh/"
+            target="_blank">Contact</a>
+        </li>
+      </ul>
+    </nav>
 
 
 
 
 
-  <script src="script.js"></script>
-  <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
-  <script>var typed = new Typed('.element', {
-      strings: ['Web Developer &', 'Python Programmer'],
-      typeSpeed: 100,
-      loop: true,
-      backSpeed: 50,
-      backDelay: 1500,
-      showCursor: false,
-      loopCount: 5,
-    });
-  </script>
-  <script>var typed = new Typed('.whyme', {
-      strings: ['WHY HIRE ME ?'],
-      typeSpeed: 150,
-      loop: true,
-      showCursor: false,
-      backSpeed: 70,
-      backDelay: 2000,
+    <script src="script.js"></script>
+    <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
+    <script>var typed = new Typed('.element', {
+        strings: ['Web Developer &', 'Python Programmer'],
+        typeSpeed: 50,
+        loop: false,
+        
+        showCursor: false,
+    
+      });
+    </script>
+    <script>var typed = new Typed('.whyme', {
+        strings: ['WHY HIRE ME ?'],
+        typeSpeed: 150,
+        loop: true,
+        showCursor: false,
+        backSpeed: 70,
+        backDelay: 2000,
 
-    });
-  </script>
-  <!-- moving menu bar script -->
-  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-  <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-  <script>
-    let toggle2 = document.querySelector('.toggle2');
-    let menus = document.querySelector('.menus');
-    toggle2.onclick = function () {
-      menus.classList.toggle('actives')
-    }
-  </script>
-  </script>
+      });
+    </script>
+ 
+    <!-- moving menu bar script -->
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    <script>
+      let toggle2 = document.querySelector('.toggle2');
+      let menus = document.querySelector('.menus');
+      toggle2.onclick = function () {
+        menus.classList.toggle('actives')
+      }
+    </script>
+    </script>
 
 </body>
 
