--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Amaranth&display=swap" rel="stylesheet">
+
+  <link rel="website icon" type="png" href="src_img/briefcase (1).png">
 </head>
 
 <body>
@@ -181,7 +183,7 @@
       <div id="footer">© 2023 All rights reserved  |  Made with <span style="color: red;">♡</span> by Sourabh Singh</div>
     </footer>
 
-    <nav>
+    <nav style="position: fixed;">
       <ul>
         <li><i class="fas fa-home"></i><a href="index.html">Home</a></li>
         <li><i class="fas fa-user-alt"></i><a
