--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
       <div id="footer">© 2023 All rights reserved  |  Made with <span style="color: red;">♡</span> by Sourabh Singh</div>
     </footer>
 
-    <nav style="position: fixed;">
+    <nav>
       <ul>
         <li><i class="fas fa-home"></i><a href="index.html">Home</a></li>
         <li><i class="fas fa-user-alt"></i><a
