--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <a href="index.html"><ion-icon name="home-outline"></ion-icon></a>
         </li>
         <li style="--i:2;">
-          <a href="https://drive.google.com/file/d/1xKZADWjwM3rxCv_lRx08DHs9vs_r42LA/view?usp=sharing"
+          <a href="https://drive.google.com/file/d/1TsM_-85us50JKyWN9L3l9-1HnSOB5HY5/view?usp=sharing"
             target="_blank"><ion-icon name="document-outline"></ion-icon></a>
         </li>
         <li style="--i:3;">
@@ -151,36 +151,45 @@
     <div class="skills" style="background-color: rgb(73,118,152);">
       <div>
         <h3 style="margin: 0;">
-          <span id="skillspan">What</span>&nbsp; <span id="skillspan1">I</span>&nbsp;work&nbsp;<span id="skillspan1">On</span>
+          <span id="skillspan">What</span>&nbsp; <span id="skillspan1">I</span>&nbsp;work&nbsp;<span
+            id="skillspan1">On</span>
         </h3>
         <div class="carousel-container1">
           <div class="carousel1">
-            <div class="item1"><img src="logo/html.png" style="border-radius: 90px;"
-                  width="63" height="64"></div>
+            <div class="item1"><img src="logo/html.png" style="border-radius: 90px;" width="63" height="64"></div>
             <div class="item1">
-                <img src="logo/css-3.png" style="border-radius: 90px;" width="63" height="64"></div>
+              <img src="logo/css-3.png" style="border-radius: 90px;" width="63" height="64">
+            </div>
             <div class="item1">
-                <img src="logo/java-script.png" style="border-radius: 90px;" width="63" height="64"></div>
+              <img src="logo/java-script.png" style="border-radius: 90px;" width="63" height="64">
+            </div>
             <div class="item1">
-                <img src="logo/structure.png" style="border-radius: 90px;" width="63" height="64"></div>
+              <img src="logo/structure.png" style="border-radius: 90px;" width="63" height="64">
+            </div>
             <div class="item1">
-                <img src="logo/sql-server.png" style="border-radius: 90px;" width="63" height="64"></div>
+              <img src="logo/sql-server.png" style="border-radius: 90px;" width="63" height="64">
+            </div>
             <div class="item1">
-                <img src="logo/python.png" style="border-radius: 90px;" width="63" height="64"></div>
+              <img src="logo/python.png" style="border-radius: 90px;" width="63" height="64">
+            </div>
             <div class="item1">
-                <img src="logo/git.png" style="border-radius: 90px;" width="63" height="64"></div>
+              <img src="logo/git.png" style="border-radius: 90px;" width="63" height="64">
+            </div>
             <div class="item1">
-                <img src="logo/github.png" style="border-radius: 90px;" width="63" height="64"></div>
+              <img src="logo/github.png" style="border-radius: 90px;" width="63" height="64">
+            </div>
             <div class="item1">
-                <img src="logo/wordpress.png" style="border-radius: 90px;" width="63" height="64"></div>
+              <img src="logo/wordpress.png" style="border-radius: 90px;" width="63" height="64">
+            </div>
             <div class="item1">
-                <img src="logo/KNIME-LOGO.png" style="border-radius: 90px;" width="63" height="64"></div>
+              <img src="logo/KNIME-LOGO.png" style="border-radius: 90px;" width="63" height="64">
+            </div>
           </div>
         </div>
       </div>
     </div>
     <footer>
-      <div id="footer">© 2023 All rights reserved  |  Made with <span style="color: red;">♡</span> by Sourabh Singh</div>
+      <div id="footer">© 2023 All rights reserved | Made with <span style="color: red;">♡</span> by Sourabh Singh</div>
     </footer>
 
     <nav>
@@ -205,9 +214,9 @@
         strings: ['Web Developer &', 'Python Programmer'],
         typeSpeed: 50,
         loop: false,
-        
+
         showCursor: false,
-    
+
       });
     </script>
     <script>var typed = new Typed('.whyme', {
@@ -220,7 +229,7 @@
 
       });
     </script>
- 
+
     <!-- moving menu bar script -->
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
